# advent-of-code

./: .gitignore  new_day.sh  pyproject.toml
2020/01/: solution.py
2020/02/: solution.py
2020/03/: solution.py
2020/04/: solution.py  test_solution.py
2020/05/: solution.py
2020/06/: solution.py
2020/07/: solution.py
2020/08/: solution.py  solution_o_of_n.py
2020/09/: solution.py
2020/10/: solution.py
2020/11/: solution.py  solution_oo.py
2020/12/: solution.py
2020/13/: solution.py
2020/15/: solution.py
2020/16/: solution.py
2020/17/: solution.py  solution_efficient.py
2020/18/: solution.py
2020/19/: solution-part1.py  solution-regex.py  solution.py
2021/01/: solution.py
2021/02/: solution.py
2021/03/: solution.py
2021/04/: solution.py
2021/05/: solution.py
2021/06/: solution.py
2022/01/: solution.py
2022/02/: solution.py  solution2.py
2022/03/: solution.py
2022/04/: solution.py
2022/05/: solution.py
2022/06/: solution.py
2022/07/: solution.py
2022/08/: dynamic_solution.py  solution.py
2022/09/: solution.py
2022/10/: solution.py
2022/11/: solution.py
2022/12/: solution.py
2022/13/: solution.py
2022/14/: solution.py
2022/15/: solution.py
2022/16/: solution.py
2023/01/: solution.py
2023/02/: solution.py
2023/03/: solution.py
2023/04/: solution.py
2023/05/: solution.py
2024/01/: solution.py
2024/02/: solution.py
2024/03/: solution.py
2024/04/: solution.py
2024/05/: solution.py
2024/06/: solution.py
2024/07/: solution.py
2024/08/: solution.py
