[tool.poetry]
name = "Advent of Code"
version = "0.1.0"
description = "Solutions for Advent of Code"
authors = ["Daniel Lahyani <daniel.lahyani@gmail.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
