[tool.poetry]
name = "Advent of Code"
version = "0.1.0"
description = "Solutions for Advent of Code"
authors = ["Daniel Lahyani <daniel.lahyani@gmail.com>"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2020.11.13"
parse = "^1.19.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
